--- a/assets/styles/_woo-single-product.less
+++ b/assets/styles/_woo-single-product.less
@@ -356,6 +356,14 @@ table.variations {
   }
 }
 
+ul.products {
+  img {
+    min-height: 225px;
+    max-height: 225px;
+    object-fit: cover;
+  }
+}
+
 .hb-single-product-accessories {
   .products {
     display: flex;
