--- a/assets/styles/all.css
+++ b/assets/styles/all.css
@@ -1087,6 +1087,11 @@ table.variations tr .value select {
   max-width: 600px;
   height: auto;
 }
+ul.products img {
+  min-height: 225px;
+  max-height: 225px;
+  object-fit: cover;
+}
 .hb-single-product-accessories .products {
   display: flex;
   flex-wrap: wrap;
@@ -1363,9 +1368,16 @@ table.variations tr .value select {
   color: var(--color-dark);
   margin-bottom: var(--gap-sm);
 }
-.modal-content .custom-form-wrapper {
+.modal-content .custom-form-wrapper,
+.modal-content__inner {
   color: var(--color-dark);
   text-align: left;
+}
+.modal-content .custom-form-wrapper iframe,
+.modal-content__inner iframe {
+  display: block;
+  width: 100%;
+  min-height: 400px;
 }
 @media (max-width: 768px) {
   .modal-content {
