--- a/assets/styles/all.css
+++ b/assets/styles/all.css
@@ -827,6 +827,7 @@ body {
 }
 .woocommerce-product-gallery {
   display: flex;
+  flex-wrap: wrap;
   gap: var(--gap-xsm);
 }
 @media (max-width: 768px) {
@@ -836,10 +837,12 @@ body {
 }
 .flex-control-nav.flex-control-thumbs {
   display: flex;
-  flex-direction: column;
-  order: 2;
-  width: 100% !important;
-  max-width: 50px !important;
+  order: 5;
+}
+@media (max-width: 768px) {
+  .flex-control-nav.flex-control-thumbs {
+    width: 100%;
+  }
 }
 @media (max-width: 768px) {
   .flex-control-nav.flex-control-thumbs {
@@ -850,14 +853,24 @@ body {
   }
 }
 .flex-control-nav.flex-control-thumbs li {
-  width: 50px !important;
-  height: 50px !important;
+  width: 100px !important;
+  height: 100px !important;
 }
 .flex-control-nav.flex-control-thumbs li img {
   display: block;
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
   object-fit: cover;
+}
+@media (max-width: 768px) {
+  .flex-control-nav.flex-control-thumbs li {
+    width: 50px !important;
+    height: 50px !important;
+  }
+  .flex-control-nav.flex-control-thumbs li img {
+    width: 50px;
+    height: 50px;
+  }
 }
 .flex-viewport {
   order: 3;
