--- a/assets/styles/_woo-single-product.less
+++ b/assets/styles/_woo-single-product.less
@@ -70,6 +70,8 @@
 
 .flex-control-nav.flex-control-thumbs {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   //flex-direction: column;
   order: 5;
   //width: 100% !important;
