--- a/assets/styles/_woo-single-product.less
+++ b/assets/styles/_woo-single-product.less
@@ -71,7 +71,7 @@
 .flex-control-nav.flex-control-thumbs {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  //justify-content: center;
   //flex-direction: column;
   order: 5;
   //width: 100% !important;
@@ -90,8 +90,8 @@
   }
 
   li {
-    width: 100px !important;
-    height: 100px !important;
+    width: 107.3px !important;
+    height: 107.3px !important;
 
     img {
       display: block;
