--- a/assets/styles/_base.less
+++ b/assets/styles/_base.less
@@ -205,6 +205,8 @@ body {
     a {
       text-decoration: none;
     }
+    box-shadow: 0 0 5px var(--color2-light2);
+    border-radius: var(--border-radius);
   }
 
   .btn {
