--- a/assets/styles/_woo-category-page.less
+++ b/assets/styles/_woo-category-page.less
@@ -82,6 +82,7 @@
       background-color: var(--color-light);
       display: flex;
       flex-direction: column;
+
       a {
         text-decoration: none;
       }
@@ -111,15 +112,50 @@
     &__item {
       padding: var(--gap-sm) var(--gap-md);
     }
+
     &__heading {
       margin: 0;
     }
+
     .swiper-button-next,
     .swiper-button-prev {
       color: var(--color2);
     }
+
     .swiper-pagination-bullet {
       background: var(--color2);
+    }
+  }
+
+  .hb-wide-block {
+    &__holder {
+      display: flex;
+      flex-wrap: wrap;
+      gap: var(--gap-sm);
+      justify-content: space-between;
+      margin-block: var(--gap-sm);
+    }
+
+    .hb-wide-block__holder:nth-child(even) {
+      .hb-wide-block__item_img {
+        order: -1;
+      }
+    }
+
+
+    &__item {
+      flex: 1 1 300px;
+      h1,h2,h3,h4,h5,h6 {
+        margin-top: 0;
+        color: var(--color1);
+      }
+      &_img {
+        img {
+          width: 100%;
+          max-width: 600px;
+          display: block;
+        }
+      }
     }
   }
 }
