--- a/assets/styles/_base.less
+++ b/assets/styles/_base.less
@@ -234,6 +234,9 @@ body {
   gap: var(--gap-sm);
 
   article {
+    width: 100%;
+    max-width: 370px;
+    overflow: hidden;
     padding: var(--gap-sm);
     border-radius: var(--border-radius);
     box-shadow: var(--shadow);
@@ -254,6 +257,7 @@ body {
       height: 225px;
       object-fit: cover;
       width: 100%;
+      max-width: 280px;
     }
   }
 }
