--- a/assets/styles/_base.css
+++ b/assets/styles/_base.css
@@ -230,6 +230,9 @@ body {
   gap: var(--gap-sm);
 }
 .hb-grid-of-posts-loop article {
+  width: 100%;
+  max-width: 370px;
+  overflow: hidden;
   padding: var(--gap-sm);
   border-radius: var(--border-radius);
   box-shadow: var(--shadow);
@@ -246,6 +249,7 @@ body {
   height: 225px;
   object-fit: cover;
   width: 100%;
+  max-width: 280px;
 }
 .hb-pagination {
   display: flex;
