some small css fixes

--- a/assets/styles/_modal.less
+++ b/assets/styles/_modal.less
@@ -59,7 +59,7 @@
     font-size: 40px;
     margin-left: auto;
     display: table;
-    color: var(--color-dark);
+    color: var(--color-dark) !important;
     margin-bottom: var(--gap-sm);
   }
 
