--- a/assets/styles/all.css
+++ b/assets/styles/all.css
@@ -76,7 +76,7 @@ body {
   margin-inline: auto;
 }
 .text-light {
-  color: var(--color-light);
+  color: var(--color-light) !important;
 }
 .text-light a {
   color: var(--color-light) !important;
@@ -1485,7 +1485,7 @@ ul.products img {
   font-size: 40px;
   margin-left: auto;
   display: table;
-  color: var(--color-dark);
+  color: var(--color-dark) !important;
   margin-bottom: var(--gap-sm);
 }
 .modal-content .custom-form-wrapper,
