--- a/assets/styles/_base.css
+++ b/assets/styles/_base.css
@@ -74,7 +74,7 @@ body {
   margin-inline: auto;
 }
 .text-light {
-  color: var(--color-light);
+  color: var(--color-light) !important;
 }
 .text-light a {
   color: var(--color-light) !important;
