--- a/assets/styles/_base.less
+++ b/assets/styles/_base.less
@@ -42,7 +42,7 @@ body {
 }
 
 .text-light {
-  color: var(--color-light);
+  color: var(--color-light) !important;
   a {
     color: var(--color-light) !important;
   }
