--- a/assets/styles/_modal.css
+++ b/assets/styles/_modal.css
@@ -94,7 +94,7 @@
   font-size: 40px;
   margin-left: auto;
   display: table;
-  color: var(--color-dark);
+  color: var(--color-dark) !important;
   margin-bottom: var(--gap-sm);
 }
 .modal-content .custom-form-wrapper,
