--- a/assets/styles/_woo-single-product.less
+++ b/assets/styles/_woo-single-product.less
@@ -423,6 +423,16 @@ ul.products {
   }
 }
 
+
+.hb-on-sale-wrapper {
+  position: relative;
+  span.onsale {
+    right: 0;
+    left: unset;
+    transform: translateY(-50%);
+  }
+}
+
 .hb-single-product-warning {
   background-color: var(--color2-light3);
   margin-block: var(--gap-lg) 0;
