button shop simple product color

--- a/assets/styles/_woo-single-product.less
+++ b/assets/styles/_woo-single-product.less
@@ -423,6 +423,9 @@ ul.products {
   }
 }
 
+.button.wp-element-button.product_type_simple.add_to_cart_button {
+  color: var(--color-light) !important;
+}
 
 .hb-on-sale-wrapper {
   position: relative;
