--- a/assets/styles/_base.css
+++ b/assets/styles/_base.css
@@ -267,4 +267,15 @@ body {
 .hb-pagination .current {
   font-weight: bold;
 }
+.hb-calc1 {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  gap: var(--gap-xsm);
+}
+.hb-calc1 input {
+  margin-block: 10px;
+  border: 1px solid var(--color1);
+  padding: 5px;
+}
 /*# sourceMappingURL=_base.css.map */
