--- a/assets/styles/all.css
+++ b/assets/styles/all.css
@@ -269,6 +269,17 @@ body {
 .hb-pagination .current {
   font-weight: bold;
 }
+.hb-calc1 {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  gap: var(--gap-xsm);
+}
+.hb-calc1 input {
+  margin-block: 10px;
+  border: 1px solid var(--color1);
+  padding: 5px;
+}
 .site-header {
   padding-bottom: var(--gap-sm);
 }
