swiper woo single product added

--- a/assets/styles/_base.less
+++ b/assets/styles/_base.less
@@ -300,3 +300,24 @@ body {
     padding: 5px;
   }
 }
+
+.hb-regular-swiper {
+  background-color: var(--color2-light3);
+
+  &__item {
+    padding: var(--gap-sm) var(--gap-md);
+  }
+
+  &__heading {
+    margin: 0;
+  }
+
+  .swiper-button-next,
+  .swiper-button-prev {
+    color: var(--color2);
+  }
+
+  .swiper-pagination-bullet {
+    background: var(--color2);
+  }
+}
