--- a/assets/styles/_woo-single-product.css
+++ b/assets/styles/_woo-single-product.css
@@ -278,6 +278,22 @@ body {
   border: 1px solid var(--color1);
   padding: 5px;
 }
+.hb-regular-swiper {
+  background-color: var(--color2-light3);
+}
+.hb-regular-swiper__item {
+  padding: var(--gap-sm) var(--gap-md);
+}
+.hb-regular-swiper__heading {
+  margin: 0;
+}
+.hb-regular-swiper .swiper-button-next,
+.hb-regular-swiper .swiper-button-prev {
+  color: var(--color2);
+}
+.hb-regular-swiper .swiper-pagination-bullet {
+  background: var(--color2);
+}
 .single-product-container-woo-thumbs-and-meta {
   display: flex;
   flex-wrap: wrap;
