extra promo field added

--- a/assets/styles/_base.less
+++ b/assets/styles/_base.less
@@ -41,6 +41,10 @@ body {
   margin-inline: auto;
 }
 
+.text-no-underline {
+  text-decoration: none;
+}
+
 .text-light {
   color: var(--color-light) !important;
 
