--- a/assets/styles/_woo-category-page.css
+++ b/assets/styles/_woo-category-page.css
@@ -73,6 +73,9 @@ body {
 .block-center {
   margin-inline: auto;
 }
+.text-no-underline {
+  text-decoration: none;
+}
 .text-light {
   color: var(--color-light) !important;
 }
