--- a/assets/styles/_woo-single-product.less
+++ b/assets/styles/_woo-single-product.less
@@ -521,6 +521,7 @@ ul.products {
     color: var(--color-light);
     border-radius: var(--border-radius);
     box-shadow: var(--shadow);
+    display: table;
     
     @media (min-width: @mobile) {
       position: relative;
