--- a/assets/styles/all.css
+++ b/assets/styles/all.css
@@ -1346,6 +1346,7 @@ ul.products img {
   color: var(--color-light);
   border-radius: var(--border-radius);
   box-shadow: var(--shadow);
+  display: table;
 }
 @media (min-width: 768px) {
   .hb-category-page-products-manual__promo {
