category page template button manual changes

--- a/assets/styles/all.less
+++ b/assets/styles/all.less
@@ -10,5 +10,6 @@
 @import "_woocommerce";
 @import "_woo-single-product";
 @import "_woo-category-page";
+@import "_category-page-template";
 @import "_wp-inner-pages";
 @import "_modal";
