--- a/assets/styles/all.css
+++ b/assets/styles/all.css
@@ -1282,82 +1282,6 @@ ul.products img {
 .product-long-description h6 {
   color: var(--color1);
 }
-.hb-category-page-products-manual__holder {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: var(--gap-sm);
-}
-.hb-category-page-products-manual__item {
-  flex: 1 1 400px;
-  position: relative;
-  padding: var(--gap-sm);
-  box-shadow: var(--shadow);
-  border-radius: var(--border-radius);
-}
-@media (max-width: 1100px) {
-  .hb-category-page-products-manual__item {
-    flex: 1 1 100%;
-  }
-}
-.hb-category-page-products-manual__inner {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: var(--gap-sm);
-}
-@media (max-width: 630px) {
-  .hb-category-page-products-manual__inner {
-    flex-wrap: wrap;
-    gap: var(--gap-xsm);
-  }
-}
-.hb-category-page-products-manual__img {
-  width: 200px;
-  height: 200px;
-  object-fit: contain;
-  object-position: center center;
-}
-@media (max-width: 630px) {
-  .hb-category-page-products-manual__img {
-    width: 100%;
-    margin-bottom: var(--gap-md);
-    object-fit: cover;
-  }
-}
-.hb-category-page-products-manual__text {
-  text-align: justify;
-}
-.hb-category-page-products-manual__text p {
-  margin-top: 0;
-}
-.hb-category-page-products-manual__text h1,
-.hb-category-page-products-manual__text h2,
-.hb-category-page-products-manual__text h3,
-.hb-category-page-products-manual__text h4,
-.hb-category-page-products-manual__text h5,
-.hb-category-page-products-manual__text h6 {
-  text-align: left;
-  color: var(--color1);
-}
-.hb-category-page-products-manual__promo {
-  padding: var(--gap-xsm);
-  background-color: var(--color3);
-  color: var(--color-light);
-  border-radius: var(--border-radius);
-  box-shadow: var(--shadow);
-  display: table;
-}
-@media (min-width: 768px) {
-  .hb-category-page-products-manual__promo {
-    position: relative;
-    top: -20px;
-    left: -20px;
-    margin-bottom: -30px;
-    overflow: hidden;
-    transform: translateX(-5px) translateY(-7px);
-  }
-}
 .hb-category-page .hb-category-page-hero__holder {
   display: flex;
   flex-wrap: wrap;
@@ -1483,6 +1407,89 @@ ul.products img {
   width: 100%;
   max-width: 600px;
   display: block;
+}
+.hb-category-page-products-manual__holder {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: var(--gap-sm);
+}
+.hb-category-page-products-manual__item {
+  flex: 1 1 400px;
+  position: relative;
+  padding: var(--gap-sm);
+  box-shadow: var(--shadow);
+  border-radius: var(--border-radius);
+  display: flex;
+  flex-direction: column;
+}
+@media (max-width: 1100px) {
+  .hb-category-page-products-manual__item {
+    flex: 1 1 100%;
+  }
+}
+.hb-category-page-products-manual__bot {
+  align-self: center;
+  justify-self: flex-end;
+  margin-top: auto;
+}
+.hb-category-page-products-manual__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: var(--gap-sm);
+}
+@media (max-width: 630px) {
+  .hb-category-page-products-manual__inner {
+    flex-wrap: wrap;
+    gap: var(--gap-xsm);
+  }
+}
+.hb-category-page-products-manual__img {
+  width: 200px;
+  height: 200px;
+  object-fit: contain;
+  object-position: center center;
+}
+@media (max-width: 630px) {
+  .hb-category-page-products-manual__img {
+    width: 100%;
+    margin-bottom: var(--gap-md);
+    object-fit: cover;
+  }
+}
+.hb-category-page-products-manual__text {
+  text-align: justify;
+}
+.hb-category-page-products-manual__text p {
+  margin-top: 0;
+}
+.hb-category-page-products-manual__text h1,
+.hb-category-page-products-manual__text h2,
+.hb-category-page-products-manual__text h3,
+.hb-category-page-products-manual__text h4,
+.hb-category-page-products-manual__text h5,
+.hb-category-page-products-manual__text h6 {
+  text-align: left;
+  color: var(--color1);
+}
+.hb-category-page-products-manual__promo {
+  padding: var(--gap-xsm);
+  background-color: var(--color3);
+  color: var(--color-light);
+  border-radius: var(--border-radius);
+  box-shadow: var(--shadow);
+  display: table;
+}
+@media (min-width: 768px) {
+  .hb-category-page-products-manual__promo {
+    position: relative;
+    top: -20px;
+    left: -20px;
+    margin-bottom: -30px;
+    overflow: hidden;
+    transform: translateX(-5px) translateY(-7px);
+  }
 }
 .type-post a,
 .entry-title a a {
