--- a/assets/styles/_category-page-template.less
+++ b/assets/styles/_category-page-template.less
@@ -17,6 +17,7 @@
     border-radius: var(--border-radius);
     display: flex;
     flex-direction: column;
+    gap: var(--gap-xsm);
 
     @media (max-width: 1100px) {
       flex: 1 1 100%;
