badges i 66.6 width height set

--- a/assets/styles/_category-page-template.css
+++ b/assets/styles/_category-page-template.css
@@ -311,6 +311,7 @@ body {
   border-radius: var(--border-radius);
   display: flex;
   flex-direction: column;
+  gap: var(--gap-xsm);
 }
 @media (max-width: 1100px) {
   .hb-category-page-products-manual__item {
