--- a/assets/styles/_woo-single-product.less
+++ b/assets/styles/_woo-single-product.less
@@ -227,6 +227,8 @@ table.variations {
     padding: var(--gap-sm);
     border: 1px solid var(--color1);
     border-radius: 50%;
+    width: 66.6px;
+    height: 66.6px;
 
     transition: var(--transition);
 
